--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "next": "12.2.2",
+    "next-auth": "^4.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
