--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "html-react-parser": "^3.0.1",
     "next": "12.2.2",
     "next-auth": "^4.10.0",
     "react": "18.2.0",
